--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "description": "Shopper",
   "orientation": "portrait",
 
-  "start_url": "https://sid500.github.io/Ecoomerce_pwa/",
+  "start_url": "https://anujsup.github.io/PWA-Assignment/",
   "display": "standalone",
   "background_color": "#fafafa",
   "theme_color": "#fafafa",
